--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
+    "heroku-postbuild": "ng build --prod",
     "e2e": "ng e2e"
+  },
+  "engines": {
+    "node": "13.11.0",
+    "npm": "6.14.4"
   },
   "private": true,
   "dependencies": {
