--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "~9.0.6",
+    "@angular/compiler-cli": "~9.0.6",
     "@angular/animations": "~9.0.6",
     "@angular/cdk": "^9.2.0",
     "@angular/common": "~9.0.6",
