inicio de integração firebase

--- a/angular.json
+++ b/angular.json
@@ -121,6 +121,10 @@
               "devServerTarget": "minha-loja-web:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
