--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/compiler": "~9.0.6",
     "@angular/compiler-cli": "~9.0.6",
     "@angular/core": "~9.0.6",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "~9.0.6",
     "@angular/localize": "^9.1.0",
     "@angular/material": "^9.2.0",
@@ -30,6 +31,7 @@
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
     "express": "^4.17.1",
+    "firebase": "^7.14.2",
     "jwt-decode": "^2.2.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
@@ -54,6 +56,11 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "~3.7.5"
+    "typescript": "~3.7.5",
+    "@angular-devkit/architect": "~0.900",
+    "firebase-tools": "^8.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1"
   }
 }
